--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,14 +1,48 @@
-<p style="color: green"><%= notice %></p>
+<h1>List Customers</h1>
+  <br>
+  <%= link_to "New customer", new_customer_path , class: "btn btn-primary"%>
+  <br>
+  <br>
+  <table class="tabell text-center" id="items"  > 
+      <thead >
+        <tr>
+          <th coolspan="3">Number</th>
+          <th coolspan="3">Name</th>
+          <th coolspan="3">Email</th>
+          <th coolspan="3">Phone</th>
+          <th coolspan="3">Address</th>
+          <th coolspan="3">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each_with_index do |customer, index| %>
+          <% index += 1 %>
+          <tr>
+            <td><%= index %></td>
+            <td><%=  customer.name %></td>
+            <td><%=  customer.email %></td>
+            <td><%=  customer.phone %></td>
+            <td><%=  customer.address %></td>
 
-<h1>Customers</h1>
+            <td><%= link_to "Show this customer", customer , class: "btn btn-info" %></td>
+            <td><%= link_to "Edit this customer", edit_customer_path(customer), class: "btn btn-light"  %></td>
+            <td><%= link_to "Delete this customer", customer , action: :destroy, method: :delete , class: "btn btn-danger"  %></td>        
+          </tr>
+      </tbody>  
+      <% end %>
+  </table>
+  
 
-<div id="customers">
-  <% @customers.each do |customer| %>
-    <%= render customer %>
-    <p>
-      <%= link_to "Show this customer", customer %>
-    </p>
-  <% end %>
 </div>
 
-<%= link_to "New customer", new_customer_path %>
+</body>
+
+<footer>
+  <div class="footer1" >
+    <div class="footer2" >
+    <h6 align="center" > Copyright &#9400; 2022 - Gigih_Family_Market </h6>
+    </div>  
+  </div>
+</footer>
+
+
