--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,14 +1,88 @@
-<p style="color: green"><%= notice %></p>
+<body>
 
-<h1>Orders</h1>
+<nav class="containerr navbar navbar-expand-lg navbar-light gradient">
+  <div class="container-fluid">
+    <div class="image">
+    <%= image_tag "gengigih.png", class: "image img" %>
+      <h5 style="margin-left:1rem; color:snow;">Gigih Family Catering</h5>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" >
+      <div class="navbar-nav" style="margin-left:3rem;" >
+      
+      <%= link_to "Customers", "customers#index" , class:'nav-link snow' %>
+      <%= link_to "Items", "items#index" , class:'nav-link snow' %>
+      <%= link_to "Categories", "categories#index" , class:'nav-link snow' %>  
+      
+      </div>
+    </div>
+  </div>
+</nav>
 
-<div id="orders">
-  <% @orders.each do |order| %>
-    <%= render order %>
-    <p>
-      <%= link_to "Show this order", order %>
-    </p>
-  <% end %>
+<div class="containerr container" >
+  <h2 class="text-center" align="center" >Welcome to  Catering </h2>
+  <br>
+  <h3 class="text-center" align="center" >Free to order your favorite menu </h3> 
+</div>
+ 
+
+
+<div class="containerr"> 
+  
+  <p style="color: green"><%= notice %></p>
+  <br>
+  <h1>Orders</h1>
+  <br>
+  <%= link_to "Create Order", new_order_path, class:'btn btn-secondary' %>
+  <%= link_to "Today's Orders", orders_path(order_date: Order.get_todays_date), class:'btn btn-info' %>
+  <%= link_to "All Time's Orders", orders_path, class:'btn btn-success' %>
+  <%= link_to "Generate Report", orders_generate_report_path, class:'btn btn-warning' %>
+
+  <br><br>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">No</th>
+        <th scope="col">Customer Name</th>
+        <th scope="col">Customer Email</th>
+        <th scope="col">Total Price</th>
+        <th scope="col">Order Date</th>
+        <th scope="col">Order Status</th>
+        <th scope="col" colspan="2">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @orders.each_with_index do |order, index| %>
+        <% index += 1%>  
+        <tr>
+          <td><%= index %></td>
+          <td><%= order.customer.name %></td>
+          <td><%= order.customer.email %></td>
+          <td><%= order.total_price %></td>
+          <td><%= order.order_date %></td>
+          <td><%= order.status %></td>
+
+          <td>
+              <%= link_to "Show", order, class:'btn btn-primary' %>
+          </td>
+          <td>
+              <%= button_to "Delete this order", order, method: :delete, class:'btn btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
 </div>
 
-<%= link_to "New order", new_order_path %>
+</body>
+
+<footer>
+  <div class="footer1" >
+    <div class="footer2" >
+    <h6 align="center" > Copyright &#9400; 2022 - Gigih_Family_Market </h6>
+    </div>  
+  </div>
+</footer>
